<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Moves</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Preferences</string>
    <string name="title_activity_ui2">UI2</string>
    <string name="title_activity_ui3">UI3</string>
    <string name="title_activity_ui4">UI4</string>
    <string name="title_activity_ui5">Preferences-UI5</string>
    <string name="default_axes">Default axes to use</string>
    <string name="x">X</string>
    <string name="Upsampling">Upsampling</string>
    
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="default_upsampling">Default upsampling amount</string>
    <string name="max_duration">Maximum recording duration</string>
    <string name="sample_rate">Sample rate</string>
    <string name="action_restore_defaults">Restore to default settings</string>
<string-array name="paesi">
        <item>Rec01</item>
        <item>Rec02</item>
        <item>AranciaGranate</item>
        <item>Milano</item>
        <item>3</item>
        <item>Roma</item>
        <item>Venezia</item>
        <item>Rec01</item>
        <item>Rec02</item>
        <item>AranciaGranate</item>
        <item>Milano</item>
        <item>3</item>
        <item>Roma</item>
        <item>Venezia</item>
 </string-array>
    <array name="immagini">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>
    <string name="current_file">Default Name</string>
    <string name="restore_defaults">Restore defaults settings</string>
    <string name="new_session">Create A New Recording Session</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="clone">Clone</string>
    <string name="rename">Rename</string>
    <string name="details">Details</string>
    <string name="music_sessions">Music Sessions</string>
 
    
    
</resources>
