<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    			  xmlns:musicmoves="musicmoves"
    android:title="@string/title_activity_ui5">
    
    <PreferenceCategory android:title="@string/default_axes" 
        android:key="default_axes">
    <CheckBoxPreference
        android:key="x"
        android:title="@string/x"
        android:defaultValue="true" 
        android:summary="Enable/disable X axe"/>
    <CheckBoxPreference 
        android:key="y"
        android:title="@string/y"
        android:defaultValue="true" 
        android:summary="Enable/disable Y axe"/>
    <CheckBoxPreference
		android:key="z"
		android:title="@string/z"
		android:defaultValue="true" 
		android:summary="Enable/disable Z axe"/>
    
    
    <com.example.musicmoves.SeekBarPreference
         android:key="upsampling" 
         android:title="@string/upsampling" 
         android:summary="Default amount of upsampling" 
         android:defaultValue="20" 
         android:max="40"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:progress="0"
         musicmoves:min="10"
         musicmoves:unitsLeft=""
         musicmoves:unitsRight="0 samples"
         />
     <com.example.musicmoves.SeekBarPreference
         android:key="maxRecTime" 
         android:title="Maximum recording duration" 
         android:summary="Maximum duration of a recording session" 
         android:defaultValue="10" 
         android:max="10"
         android:progress="0"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         musicmoves:min="2"
         musicmoves:unitsLeft=""
         musicmoves:unitsRight=" minutes"
         />
     <com.example.musicmoves.SeekBarPreference
          android:key="sampleRate" 
          android:title="Sample rate" 
          android:summary="Sample rate used to record accelerometer data" 
          android:defaultValue="3" 
          android:max="10"
          android:progress="0" 
          musicmoves:min="1"
          musicmoves:unitsLeft=""
          musicmoves:unitsRight=" sample/second"
          />
    
    </PreferenceCategory>   
</PreferenceScreen>